    Added API method to check if a skill was being level capped
Version 2.1.31
    Fixed a bug where certain SubSkills did not properly send unlock or rank up notifications
    Fixed a bug where unlock notifications would send simultaneously for a specific skill (still happens if mmoedit changes all skill levels on a player at once)

Version 2.1.30
    Fixed double drops behaving oddly
    Double_Drop config table has been renamed to Bonus_Drops, this is to jankily auto-update everyones config
    DoubleDrop config tables now must contain all things that can possibly be doubled, such as the Ore block, the ore itself, etc.
    Added the following items to the Bonus_Drops tables for Mining: Coal, Diamond, Emerald, Glowstone_Dust, Iron_Ingot, Lapis_Lazuli, Nether_Quartz, Redstone, Cobblestone
    Added the following items to the Bonus_Drops tables for Herbalism: Beetroot, Carrot, Cocoa_Beans, Melon_Slice, Potatoe
    Added the following items to the Bonus_Drops tables for Woodcutting: Birch_Wood, Spruce_Wood, Jungle_Wood, Dark_Oak_Wood, Oak_Wood, Acacia_Wood

    NOTE: You don't need to update your configs for this one unless you had custom entries in the Double_Drop tables, the renaming of the key will auto-insert default values and give everyone correct defaults
    NOTE: I'm gonna have to blame Bukkit on this one, several API methods I used are actually unfinished and kind of janky. So I hacked something together to make them work.

Version 2.1.29
    Fixed a bug where double drops and triple drops were not activating

Version 2.1.28
    Fixed a bug where Archery could not gain XP

Version 2.1.27
    Fixed an exploit that allowed players to duplicate torches, and rails

Version 2.1.26
    Added new scaling damage buffs to all existing Combat Skills
    Added a new subskill named Stab to Swords
    Fixed a bug where Berserk was not adding 50% damage to attacks